--- a/linear_regression_model.ipynb
+++ b/linear_regression_model.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "r7l9X6qe5ZQq"
       },
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "-W_px3OG5ZQt"
       },
@@ -47,14 +47,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
         },
         "id": "FOxk2RAt5ZQu",
-        "outputId": "86f8326c-9509-41d7-dc07-3d499489d603"
+        "outputId": "edf356d5-10b7-47e3-baa9-ed5220113f3c"
       },
       "outputs": [
         {
@@ -62,7 +62,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-916048d2-0832-4f10-9b07-2ceb800f08fb\">\n",
+              "  <div id=\"df-7d4cbd3d-7270-4d95-83e3-ffbb69fd1374\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -145,7 +145,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-916048d2-0832-4f10-9b07-2ceb800f08fb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7d4cbd3d-7270-4d95-83e3-ffbb69fd1374')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -196,12 +196,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-916048d2-0832-4f10-9b07-2ceb800f08fb button.colab-df-convert');\n",
+              "          document.querySelector('#df-7d4cbd3d-7270-4d95-83e3-ffbb69fd1374 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-916048d2-0832-4f10-9b07-2ceb800f08fb');\n",
+              "          const element = document.querySelector('#df-7d4cbd3d-7270-4d95-83e3-ffbb69fd1374');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -234,7 +234,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 23
         }
       ],
       "source": [
@@ -243,13 +243,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2z55UjC5ZQv",
-        "outputId": "05b003bb-2416-48a2-9b73-0042e6491a37"
+        "outputId": "9a927a42-ec6b-40af-bcdc-21c5f6e65dbd"
       },
       "outputs": [
         {
@@ -279,14 +279,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
         "id": "D_7p0whe5ZQw",
-        "outputId": "2dc2858d-9cd9-4cd2-f0d3-01c861d43201"
+        "outputId": "f29a408f-7ce5-4a3f-dec1-f922dd116307"
       },
       "outputs": [
         {
@@ -294,7 +294,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-c00f18b2-a8df-4196-b6dc-225a0b923cbe\">\n",
+              "  <div id=\"df-dfb7fe6b-b1e6-4ad6-8ce0-cb719a48a208\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -398,7 +398,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c00f18b2-a8df-4196-b6dc-225a0b923cbe')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dfb7fe6b-b1e6-4ad6-8ce0-cb719a48a208')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -449,12 +449,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c00f18b2-a8df-4196-b6dc-225a0b923cbe button.colab-df-convert');\n",
+              "          document.querySelector('#df-dfb7fe6b-b1e6-4ad6-8ce0-cb719a48a208 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c00f18b2-a8df-4196-b6dc-225a0b923cbe');\n",
+              "          const element = document.querySelector('#df-dfb7fe6b-b1e6-4ad6-8ce0-cb719a48a208');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -490,7 +490,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 25
         }
       ],
       "source": [
@@ -499,13 +499,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QsV27MYF5ZQw",
-        "outputId": "3fae5694-1f41-4eb0-bada-4f39be54aa58"
+        "outputId": "d0669b46-21b0-4892-e7fe-023ddbcd0b1d"
       },
       "outputs": [
         {
@@ -518,7 +518,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 26
         }
       ],
       "source": [
@@ -527,25 +527,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "6ZEIXL275ZQx",
-        "outputId": "3cf2d31f-36ea-4bd0-bb3d-4ada90229afa"
+        "outputId": "dd9e1de6-f18d-41e5-b566-9a54f5b4d811"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7fec27033610>"
+              "<seaborn.axisgrid.PairGrid at 0x7fec18b91310>"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -566,14 +566,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
         },
         "id": "tFsjNyYd5ZQy",
-        "outputId": "54a2d54b-b05f-445a-f329-caf21fdbc770"
+        "outputId": "429588e2-3d49-4c0d-aa92-3178d5d5759f"
       },
       "outputs": [
         {
@@ -588,11 +588,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fec1d1940d0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fec179c4e90>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 28
         },
         {
           "output_type": "display_data",
@@ -613,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "gxKh9vXW5ZQy"
       },
@@ -626,7 +626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "EU7y0BKC5ZQz"
       },
@@ -637,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "J40fDTEy5ZQ0"
       },
@@ -648,7 +648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "hEqlk-MW5ZQ0"
       },
@@ -659,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "LUMWhEly5ZQ1"
       },
@@ -670,13 +670,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GBnZh63r5ZQ1",
-        "outputId": "4ec1d111-37e5-4c58-ddb1-a163c82fdd7b"
+        "outputId": "477f3054-d169-48aa-8d52-2d5995a8efdf"
       },
       "outputs": [
         {
@@ -687,7 +687,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 34
         }
       ],
       "source": [
@@ -696,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "TiwhyiiD5ZQ1"
       },
@@ -707,25 +707,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 307
         },
         "id": "kt3R9ZID5ZQ2",
-        "outputId": "968fbdda-bad6-4a11-a7a6-1a696032e953"
+        "outputId": "e96d5307-6234-4cac-99e5-bf2424fb5f23"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7fec1d815a50>"
+              "<matplotlib.collections.PathCollection at 0x7fec180e8050>"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 36
         },
         {
           "output_type": "display_data",
@@ -746,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "Zmw5PvZT5ZQ2"
       },
@@ -757,13 +757,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UW5zbZ585ZQ2",
-        "outputId": "f56510c5-1b00-4fe4-c0f7-c1149f90f814"
+        "outputId": "9d889b85-bf78-4085-f689-59f1e8b84d4e"
       },
       "outputs": [
         {
@@ -791,13 +791,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWoYetGL5ZQ4",
-        "outputId": "d3c971e6-6d38-48ca-e679-b96bfbb18234"
+        "outputId": "d81cb5df-0d3e-495a-9cf1-84f31cbc6024"
       },
       "outputs": [
         {
